# llm-code-validator

./: .env.example  .gitignore  .gitmodules  .pre-commit-hooks.yaml  CURRENT_PROJECT_STATUS.md  PROJECT_REPORT.md  README.md  ai_hallucination_validator_plan.md  evaluation_results_final.txt  evaluation_results_v2.txt  evaluation_results_v3.txt  gap1.md  gap2.md  gaps.md  pyproject.toml  requirements.txt  step-by-step.md  task1.md  task2.md  task3.md  test_quick.py
.agents/rules/: super-agent.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: missed-api-drift.yml
.github/workflows/: api-drift-check.yml
agent/: graph.py  schemas.py  utils.py
agent/nodes/: check_database.py  extract_imports.py  fetch_pypi.py  generate_report.py  import_specialist.py  llm_diagnose.py  method_specialist.py  supervisor.py
api/: main.py
data/: library_signatures.json
docs/: accuracy.md  demo.md  release.md  rules.md  security.md
examples/: stale_ai_code.py
frontend/: index.html
llm_code_validator/: __init__.py  ai_review.py  benchmark.py  cli.py  config.py  core.py  diagnostics.py  fixes.py  formatting.py  library_signatures.json  rule_candidates.py  signatures.py  versioning.py
scripts/: evaluate_external_repos.py
tests/: baseline.py  evaluate.py  test_ai_review.py  test_benchmark.py  test_cli.py  test_core.py  test_external_repo_evaluation.py  test_fixes.py  test_formatting.py  test_signatures.py  test_versioning.py  test_workflows.py
tests/fixtures/ai_rag_app/: app.py  requirements.txt
tests/fixtures/sample_project/: app.py
tests/fixtures/sample_project/pkg/: dataframe.py
thesis_validation/: results.json  run_on_thesis.py
validation_dataset/: ai_stack_benchmark_cases.json  ai_stack_benchmark_results.json  cli_benchmark_cases.json  cli_benchmark_results.json  results.json  test_cases.json
